<resources>
    <string name="app_name">FitPal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="voice">Voice</string>
    <string name="signout">Sign Out</string>
    <string name="barcode">Barcode</string>
    <string name="manual">Manual</string>
    <string name="msg_no_food_found">No food found</string>

    <string name="submit">Submit</string>

    <string name="webClientId">872548580608-7h43h2017qgs4rt8c2e032oc6c0seci4.apps.googleusercontent.com</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="goal">Goal</string>
    <string name="promptGender">Choose your gender</string>

    <string-array name="genderOptions">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="promptGoal">Choose your goal</string>

    <string-array name="goalOptions">
        <item>Weight Loss</item>
        <item>Weight Gain</item>
        <item>Maintain health</item>
    </string-array>

    <string name="app_slogan">monitors what you eat and stay fit and stay healthy</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="location">Locations</string>
    <string name="group">Group</string>
    <string name="image">Image</string>
    <string name="report">Reports</string>
    <string name="recommend">Meal Recommendation</string>
    <string name="search">Search</string>
    <string name="userDets">User Details</string>
    <string name="profile">PROFILE</string>


    <string name="ipaddress">192.168.1.102:3000</string>

    <string name="google_maps_key"></string>


</resources>


