<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:gravity="bottom"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <Button
            android:id="@+id/voiceRedirectButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voice"
            android:layout_margin="50dp"
            android:layout_marginBottom="0dp"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:background="@drawable/main_button"/>

        <Button
            android:id="@+id/barcodeRedirectButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barcode"
            android:layout_margin="50dp"
            android:layout_marginTop="0dp"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:background="@drawable/main_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:gravity="bottom">

            <Button
                android:id="@+id/signoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signout"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:background="@drawable/red_button"
                />

    </LinearLayout>


</LinearLayout>